# fin-tracker

./: .env.template  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  start.sh
fin_tracker/: main.py
fin_tracker/telegram/: bot.py  router.py
